tests/snapshots/examples_advanced/contact_book.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/contact_book.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
