tests/snapshots/examples_advanced/mini_database.snap
---
source: tests/examples_advanced_snapshots.rs
assertion_line: 21
---
Fixture: examples/advanced/mini_database.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
