tests/snapshots/examples_advanced/shapes_records.snap
---
source: tests/examples/examples_advanced_snapshots.rs
assertion_line: 22
---
Fixture: examples/advanced/shapes_records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
