tests/snapshots/examples_advanced/using_constants.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/using_constants.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
